--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,7 +24,7 @@ padding: 4px 15px 4px 5px;
 
 #button{
 display: inline-block;
-background-color:#fc999b;
+background-color:#d55e60;
 color:#ffffff;
 border-radius: 5px;
 text-align:center;
